tests/machine/x/st/list_nested_assign.st
| matrix |
matrix := {{1. 2}. {3. 4}}.
matrix at: 1 at: 0 put: 5.
Transcript show: (matrix at: 1 at: 0) printString; cr.
